feat: removed redirect to form on authentication failure
